On branch main  Your branch is ahead of 'origin/main' by 1 commit.    (use "git push" to publish your local commits)
 Changes to be committed:
	modified:   index.js
	modified:   middleWares/util.js
	modified:   views/index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,9 @@
 <body>
     <div class="page">
         <div class="links">
-            <a href="detailedSearch.html">Detailed Search</a> <br class="positioning">
-            <a href="bookDB.html">Book DB</a> <br class="positioning">
-            <a href="mageDB.html">Mage DB</a>        
+            <a href="DetailedSearch">Detailed Search</a> <br class="positioning">
+            <a href="BookDB">Book DB</a> <br class="positioning">
+            <a href="MageDB">Mage DB</a>        
         </div>
         <input class="standard" type="text" placeholder="Search for book">
             <table class="standard bordered">
